--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,14 +2,22 @@ body {
   background-color: #251313;
   margin: 10px 0 0 0;
   padding: 0 0 0 0;
+  scroll-behavior: smooth;
+}
+
+.logo {
+  width: 70px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
 }
 .container-fluid {
   padding: 0;
 }
-.navbar li {
+.navbar li, .navbar a {
   list-style: none;
   margin: 15px;
   color: #edead6;
+  text-decoration: none;
 }
 .navbar h4 {
   color: #edead6;
@@ -37,13 +45,13 @@ body {
 .hero h1 {
   margin: 0;
   padding: 0;
-  font-size: 96px;
+  font-size: 60px;
   font-weight: 1000;
   color: #d35343;
 }
 .hero p {
   color: #edead6;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 200;
   margin: 5px 0 0 0;
 }
@@ -114,6 +122,10 @@ body {
 .menu {
   background-color: #edead6;
   border-radius: 120px;
+}
+.rounded-circle {
+  width: 80%;
+  aspect-ratio: 1/1;
 }
 .menuitem {
   margin: 0 0 50px 0;
