--- a/Template/home.html
+++ b/Template/home.html
@@ -3,16 +3,29 @@
 <!--hero-->
 <div class="row hero d-flex flex-column-reverse flex-lg-row overflow-hidden">
   <div class="left col-12 col-lg-5 d-flex flex-column justify-content-center">
-    <h3>ẨM THỰC</h3>
-    <h1>VIỆT NAM</h1>
-    <p>
-      Thưởng thức hương vị Việt Nam ngay hôm nay <br />
-      với dịch vụ giao đồ ăn tiện lợi và đáng tin cậy của chúng tôi.
+    <h3 data-aos="fade-right">ẨM THỰC</h3>
+    <h1
+      data-aos="fade-right"
+      data-aos-delay="200"
+    >
+      VIỆT NAM
+    </h1>
+    <p
+      data-aos="fade-right"
+      data-aos-delay="400"
+    >
+      Thưởng thức hương vị Việt Nam ngay hôm nay
     </p>
 
-    <div class="col-12">
+    <div
+      class="col-12"
+      data-aos="fade-up"
+      data-aos-delay="600"
+    >
       <a href="#promotion">
-        <button>Khám phá <i class="fa-solid fa-chevron-right"></i></button>
+        <button class="explore">
+          Khám phá <i class="fa-solid fa-chevron-right"></i>
+        </button>
       </a>
     </div>
   </div>
@@ -20,6 +33,7 @@
   <img
     class="right col-md-12 col-lg-7"
     src="./../images/comtam.jpeg"
+    data-aos="fade-left"
   />
 </div>
 
@@ -31,6 +45,7 @@
 >
   <!-- Hot deal title -->
   <div
+    data-aos="fade-right"
     class="title col-12 d-flex flex-column justify-content-center align-items-center rounded-end-pill"
     id=""
     style="height: 170px"
@@ -38,9 +53,10 @@
     <h3>Ưu đãi</h3>
     <h5>Hôm nay</h5>
   </div>
-  <div id="promotion-items" class="row d-flex justify-content-center align-items-center">
-   
-  </div>
+  <div
+    id="promotion-items"
+    class="row d-flex justify-content-center align-items-center"
+  ></div>
   <div class="d-flex justify-content-center align-items-center mt-5">
     <div
       class="rounded-circle mx-1"
