--- a/Template/navbar.html
+++ b/Template/navbar.html
@@ -25,10 +25,10 @@
     class="navbar col-3 col-sm-4 col-md-3 col-lg-2 justify-content-center align-items-center"
   >
     <h4>
-      <i class="fa-solid fa-user"></i>
-      <i class="fa-solid fa-cart-shopping"></i>
-      <i class="fa-solid fa-magnifying-glass"></i>
-      <i class="fa-solid fa-bars"></i>
+      <!-- <i class="fa-solid fa-user"></i> -->
+      <!-- <i class="fa-solid fa-cart-shopping"></i> -->
+      <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+      <!-- <i class="fa-solid fa-bars"></i> -->
     </h4>
   </div>
 </div>
